deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-web
  template:
    metadata:
      labels:
        app: scheduler-web
    spec:
      serviceAccountName: scheduler-web-serviceaccount
      containers:
        - name: scheduler-web
          image: scheduler-web
          ports:
            - containerPort: 9000
              protocol: TCP
