deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: scheduler-web
spec:
  selector:
    app: scheduler-web
    tier: frontend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
